fix(navbar): alignment of brand title

--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -89,9 +89,9 @@ nav {
 
   .nav-brand {
     -webkit-overflow-scrolling: touch;
-    -webkit-box-align: stretch;
-    -ms-flex-align: stretch;
-    align-items: stretch;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
